// Copyright 2019 The Exonum Team
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package exonum.service.supervisor;

import "helpers.proto";
import "runtime.proto";
import "google/protobuf/any.proto";

// Transactions

// Request for the artifact deployment.
message DeployArtifact {
    // Artifact identifier.
    exonum.runtime.ArtifactId id = 1;
    // The height to which the deployment procedure should be completed.
    uint64 deadline_height = 2;
}

// TODO Implement deploy succeed logic.

// Request for the start service instance
message StartService {
    // Artifact identifier.
    exonum.runtime.ArtifactId artifact = 1;
    // Instance name.
    string name = 2;
    // Instance configuration.
    google.protobuf.Any config = 3;
}